# cray_pwrapi

./: LICENSE  Makefile.am  README.md  configure.ac  cray-powerapi.pc.in  makerpms  module.in
Documentation/PowerAPI_Demo_Source/: Makefile  README  an9-stream.c  an9-stream.h  mt-dgemm.c  mt-dgemm.h  profile.c  profile.h  pwrdemo.c  pwrdemo.h  stats.c  stats.h  workload.c  workload.h
clients/: Makefile.am
clients/cnctl/: Makefile.am  api.c  api.h  cnctl.c  cnctl.h  io.c  io.h  perms.c  perms.h
clients/cnctl/json_tests/: README  cap.PWR_ATTR_all  cap.PWR_ATTR_all.expected  cap_val.PWR_ATTR_CSTATE_LIMIT  cap_val.PWR_ATTR_CSTATE_LIMIT.expected  cap_val.PWR_ATTR_FREQ  cap_val.PWR_ATTR_FREQ.expected  cap_val.PWR_ATTR_FREQ_LIMIT_MAX  cap_val.PWR_ATTR_FREQ_LIMIT_MAX.expected  cap_val.PWR_ATTR_FREQ_LIMIT_MIN  cap_val.PWR_ATTR_FREQ_LIMIT_MIN.expected  cap_val.PWR_ATTR_all  cap_val.PWR_ATTR_all.expected  get.PWR_ATTR_CSTATE_LIMIT  get.PWR_ATTR_CSTATE_LIMIT.expected  get.PWR_ATTR_FREQ  get.PWR_ATTR_FREQ.expected  get.PWR_ATTR_FREQ_LIMIT_MAX  get.PWR_ATTR_FREQ_LIMIT_MAX.expected  get.PWR_ATTR_FREQ_LIMIT_MIN  get.PWR_ATTR_FREQ_LIMIT_MIN.expected  get.PWR_ATTR_all  get.PWR_ATTR_all.expected  set.PWR_ATTR_CSTATE_LIMIT  set.PWR_ATTR_CSTATE_LIMIT.expected  set.PWR_ATTR_FREQ  set.PWR_ATTR_FREQ.expected  set.PWR_ATTR_FREQ_LIMIT_MAX  set.PWR_ATTR_FREQ_LIMIT_MAX.expected  set.PWR_ATTR_FREQ_LIMIT_MIN  set.PWR_ATTR_FREQ_LIMIT_MIN.expected  set.PWR_ATTR_all  set.PWR_ATTR_all.expected
clients/cson/: LICENSE  cson_amalgamation_core.c
clients/pwrcmd/: Makefile.am  README  api.c  api.h  io.c  io.h  pwrcmd.c  pwrcmd.h
common/: gov.c  permissions.c  permissions.h
daemon/: Makefile.am  powerapid.c  powerapid.h  powerapid.service  pwrapi_down.c  pwrapi_down.h  pwrapi_set.c  pwrapi_set.h  pwrapi_signal.c  pwrapi_signal.h  pwrapi_socket.c  pwrapi_socket.h  pwrapi_worker.c  pwrapi_worker.h
daemon/ctrl/: ctrl.c  ctrl.h  ctrl_request.c  ctrl_request.h  ctrl_socket.c  ctrl_socket.h
include/: Makefile.am  common.h  compiler.h  log.h
include/cray-powerapi/: api.h  powerapid.h  types.h
lib/: Makefile.am  attributes.c  attributes.h  bitmask.c  bitmask.h  context.c  context.h  group.c  group.h  hierarchy.c  hierarchy.h  ipc.c  ipc.h  log.c  object.c  object.h  opaque.c  opaque.h  plugin.h  pwr_list.c  pwr_list.h  report.c  report.h  statistics.c  statistics.h  timer.c  timer.h  typedefs.h  utility.c  utility.h  version.c  version.h
lib/hints/: hint.c  hint.h
lib/plugins/common/: command.c  command.h  common.c  common.h  file.c  file.h  paths.h
lib/plugins/cpudev/: cstate.c  cstate.h  freq.c  freq.h
lib/plugins/ipc_socket/: ipc_socket.c  ipc_socket.h
lib/plugins/x86/: x86_hierarchy.c  x86_hierarchy.h  x86_obj.c  x86_obj.h  x86_obj_core.c  x86_obj_ht.c  x86_obj_mem.c  x86_obj_node.c  x86_obj_pplane.c  x86_obj_socket.c  x86_paths.h  x86_plugin.c  x86_plugin.h
lib/rolesys/: acc_mc.c  acc_mc.h  admin_mc.c  admin_mc.h  app_os.c  app_os.h  manager_rm.c  manager_rm.h  mc_hw.c  mc_hw.h  os_hw.c  os_hw.h  rm_mc.c  rm_mc.h  rm_os.c  rm_os.h  user_mc.c  user_mc.h  user_rm.c  user_rm.h
test/: Makefile.am  README.md  makesys  postmortem  pwrtest  sysfiles.cfg
test/subsystems/: Makefile.am
test/subsystems/cnctl/: Makefile.am  cap_attrs  uid_add  uid_clear  uid_list  uid_remove  uid_restore
test/subsystems/common/: Makefile.am  cnctl.py  common.c  common.h  common.py  pwrcmd.py
test/subsystems/lib/: Makefile.am  apphints.c  appos.c  attr-freq.c  attr-gov.c  attr-power-max.c  context.c  group.c  hierarchy.c  logging.c  stats.c
test/subsystems/pwrcmd/: Makefile.am  get_attr  get_attrs  get_gattr  get_gattrs  get_meta  list_attr  set_attr  set_attrs  set_gattr  set_gattrs  set_meta
